@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+* Dotenv
+* Chinese picture
+* Demo docs added
+* first try
 * Initial commit
 * Update README.md
 * Initial commit
